# napari-rioxarray

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_rioxarray/: __init__.py  _reader.py  napari.yaml
src/napari_rioxarray/_tests/: test_reader.py
src/napari_rioxarray/_tests/data/: S2A_MSIL1C_20170102T111442_N0204_R137_T30TXT_20170102T111441_TCI_cloudoptimized_512_100m.tif  S2A_MSIL1C_20170102T111442_N0204_R137_T30TXT_20170102T111441_TCI_cloudoptimized_512_200m.tif
