[metadata]
name = napari_rioxarray
version = 0.0.1
description = A rioxarray plugin for napari supporting GDAL raster datatypes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndrewAnnex/napari-rioxarray
author = Dr. Andrew Annex
author_email = ama6fy@virginia.edu
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AndrewAnnex/napari-rioxarray/issues
    Documentation = https://github.com/AndrewAnnex/napari-rioxarray#README.md
    Source Code = https://github.com/AndrewAnnex/napari-rioxarray
    User Support = https://github.com/AndrewAnnex/napari-rioxarray/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    rioxarray
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-rioxarray = napari_rioxarray:napari.yaml

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
* = *.yaml, *.tif
